# macroregime

./: .env.example  ARROW_LINEAGE_AND_LOAD_FIX_V22.md  CHANGES_THIS_SESSION.md  CHECKSUMS_SHA256.txt  CHECK_AND_RUN.bat  CHECK_EVERYTHING.bat  CHECK_FEEDS.bat  COMPONENT_PROOF_REGISTRY_DEFAULT.json  DATA_CONNECTORS.md  DATA_REQUIREMENTS_MATRIX.json  DEEP_REAUDIT_V24.md  DEPLOYMENT_BLANK_SCREEN_FIX_V25.md  DEPLOY_NOW.md  DIAGNOSE_NO_DATA.bat  Dockerfile  EXCEPTION_ENGINE.md  FEEDS_WIRED.md  FEED_CONFIG.env.example  FINAL_DEEP_AUDIT_Q1_PARITY_NOTES.md  FINAL_HARDENING_NOTES.md  FINAL_REFACTOR_NOTES_SCENARIO_TRANSMISSION.md  FINAL_STRUCTURAL_PARITY_AUDIT_NOTES.md  FINAL_STRUCTURAL_SWING_AUDIT_NOTES.md  FINAL_TRUE_ROOT_CAUSE_AUDIT_NOTES.md  FINAL_TRUE_ROOT_Q1_FIX_NOTES.md  FORMULA_AND_SELECTOR_REGISTER.json  HARD_CODE_AND_CROSS_TAB_AUDIT.json  HOW_TO_VALIDATE.md  INSTALL.md  INSTALL_v21.md  INSTALL_v22.md  INSTALL_v23.md  ITE_ENGINE.md  KNOWLEDGE_MIGRATION.md  LEGACY_COMPONENT_QUARANTINE.md  LINEAGE_FORMULA_AUDIT.md  LIVE_DATA_ACTIVATION.md  LIVE_DATA_FULL_STACK.md  LIVE_STACK_TEST_REPORT.json  MANIFEST.json  (+220 more)
.cache/: dashboard_validate.js
.streamlit/: config.toml  secrets.toml.example
alpha_foundry/: RUN_FULL_HISTORY.bat  RUN_OFFLINE_TESTS.bat  __init__.py  requirements.txt
artifacts/: READY_STATE.json  STREAMLIT_READY_STATE.json  WarRoom_NewZip_CrashPressure_Recheck.json  WarRoom_NewZip_Data_Profile.json  WarRoom_NewZip_Entry_Range_Audit.json  WarRoom_NewZip_Entry_Range_PerTicker.csv  WarRoom_NewZip_Factor_Momentum_Recheck.json  WarRoom_NewZip_Module_Catalog.csv  (+12 more)
(+435 files in other folders)
