[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warroom-os-v3"
version = "3.0.0"
description = "Fail-closed market research and prospective evidence system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "streamlit>=1.50,<2",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "httpx>=0.27,<1"]

[project.scripts]
warroom = "warroom_v3.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
